# swc-plugin-rfc-examples

./: .babelrc.js  .gitignore  .swcrc  Cargo.toml  README.md  ident_counter_plugin.wasm  package-lock.json  package.json
crates/ident_counter/: Cargo.toml
crates/ident_counter/src/: lib.rs
crates/ident_counter_plugin/: Cargo.toml
crates/ident_counter_plugin/src/: lib.rs
crates/swc_compile/: Cargo.toml
crates/swc_compile/src/: main.rs
js-fixtures/: index.js
src/: ident_counter.rs  lib.rs
src/babel-plugin/: ident-counter.js
