[package]
name = "swc_plugin_rfc_examples"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.71"
glob = "0.3.1"
once_cell = "1.18.0"
swc = "0.263.23"
swc_bundler = "0.216.20"
swc_common = { version = "0.31.16", features = ["tty-emitter", "plugin-base"] }
swc_ecma_ast = "0.106.6"
swc_ecma_loader = "0.43.18"
swc_ecma_parser = "0.136.7"
swc_ecma_transforms = "0.220.18"
swc_ecma_visit = "0.92.5"
swc_plugin_macro = "0.9.15"
swc_plugin_proxy = { version = "0.35.5", features = ["plugin-mode"] }
swc_core = { version = "0.78.23", features = ["ecma_plugin_transform"] }
rand = "0.8.5"
