[package]
name = "swc_compile"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {workspace = true}
glob = {workspace = true}
swc = {workspace = true}
swc_common = {workspace = true}
swc_ecma_ast = {workspace = true}
swc_ecma_transforms = {workspace = true}
swc_ecma_visit = {workspace = true}
ident_counter = {path = "../ident_counter"}